--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
    <ul>
-       <li>LinkedIn - <a href ="https://www.linkedin.com/in/jessica-whitaker/"></a></li>
+       <li><a href ="https://www.linkedin.com/in/jessica-whitaker/">LinkedIn</a></li>
        <li>Facebook - nope</li>
        <li>Twitter - don't have 1</li> 
 
